--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,3 +1,7 @@
+#title-container {
+    padding-top: 150px;
+}
+
 #title {
     font-size: 50px;
     font-weight: bolder;
@@ -12,7 +16,7 @@
 }
 
 .button {
-    background-color: #859dec; 
+    background-color: #859dec;
     padding: 15px 32px;
     margin: 10px;
     text-align: center;
@@ -23,7 +27,7 @@
 }
 
 #join-button {
-    color:white;
+    color: white;
 }
 
 a {
@@ -37,7 +41,7 @@ a {
 }
 
 .nav-link {
-    color:rgba(32, 34, 37, 1);
+    color: rgba(32, 34, 37, 1);
 }
 
 #cubingWumpusImg {
@@ -54,28 +58,93 @@ main {
     font-family: 'Rubik';
 }
 
-.review {
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top: 20px;
-    background-color: #2e3338;
-    border-radius: 10px;
-    border-width: 5px;
-    max-width: 700px;
-    position: sticky;
+.footer-clean {
+    position: absolute;
+    padding: 50px 0;
+    background-color: rgba(32, 34, 37, 0.9);
+    right: 0;
+    left: 0;
+    bottom: 0;
 }
 
-#review1 {
-    text-align: left;
-    float: left;
+.footer-clean h3 {
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-weight: bold;
+    font-size: 16px;
 }
 
-#review2 {
+.footer-clean ul {
+    padding: 0px;
+    list-style: none;
+    line-height: 1.6;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+.footer-clean ul a {
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.8;
+}
+
+.footer-clean ul a:hover {
+    color: #859dec;
+}
+
+.footer-clean .item.social {
     text-align: right;
-    float: right;
 }
 
-#review3 {
-    text-align: left;
-    position: left;
+@media (max-width:767px) {
+    .footer-clean .item {
+        text-align: center;
+        padding-bottom: 20px;
+    }
 }
+
+@media (max-width: 768px) {
+    .footer-clean .item.social {
+        text-align: center;
+    }
+}
+
+.footer-clean .item.social>a {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    margin-left: 10px;
+    margin-top: 22px;
+    color: inherit;
+    opacity: 0.75;
+}
+
+.footer-clean .item.social>a:hover {
+    color: #859dec;
+}
+
+@media (max-width:991px) {
+    .footer-clean .item.social>a {
+        margin-top: 40px;
+    }
+}
+
+@media (max-width:767px) {
+    .footer-clean .item.social>a {
+        margin-top: 10px;
+    }
+}
+
+.footer-clean .copyright {
+    margin-top: 14px;
+    margin-bottom: 0;
+    font-size: 13px;
+    opacity: 0.6;
+}
+
+/* Credit to https://epicbootstrap.com/snippets/footer-with-columns */
