--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,9 +2,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Cubing Panda</title>
+    <title>The Best Online Cubing Community - CubingPanda</title>
     <meta name="description"
-        content="The Cubing Panda is a friendly online community of speedcubers from all over the world.">
+        content="CubingPanda is a friendly online cubing community home to cubers from around the world. We offer online competitions, cubing help, and more!">
+    <meta property="og:title" content="The Best Online Cubing Community - CubingPanda"/>
+    <meta property="og:url" content="cubingpanda.com"/>
+    <meta property="og:description" content="Join the CubingPanda cubing community for all things speedcubing!"/>
     <link href="./css/styles.css" rel="stylesheet">
 
 </head>
@@ -14,13 +17,13 @@
         <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
                 <a href="#" class="flex items-center">
-                    <img src="https://i.imgur.com/qPoQ2so.png" class="mr-3 h-6 sm:h-9" alt="Cubing Panda Logo" />
+                    <img src="https://i.imgur.com/qPoQ2so.png" class="mr-3 h-6 sm:h-9" alt="CubingPanda Logo" />
                     <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">CubingPanda</span>
                 </a>
                 <div class="flex items-center lg:order-2">
                     <a href="/partnership"
                         class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Partnership</a>
-                    <a href="/discord"
+                    <a href="https://discord.gg/nwH7jcjMaT"
                         class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">Discord</a>
                     <button data-collapse-toggle="mobile-menu-2" type="button"
                         class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -47,20 +50,24 @@
                                 aria-current="page">Home</a>
                         </li>
                         <li>
-                            <a href="/youtube"
+                            <a href="https://www.youtube.com/@cubingpandacommunity"
                                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">YouTube</a>
                         </li>
                         <li>
-                            <a href="/tiktok"
+                            <a href="https://www.tiktok.com/@cubingpandacommunity"
                                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">TikTok</a>
                         </li>
                         <li>
-                            <a href="/github"
+                            <a href="https://github.com/TheCubingPanda"
                                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">GitHub</a>
                         </li>
                         <li>
-                            <a href="/medium"
+                            <a href="https://medium.com/@cubingpandacommunity"
                                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Blog</a>
+                        </li>
+                        <li>
+                            <a href="https://www.reddit.com/r/cubingpanda/"
+                                class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Reddit</a>
                         </li>
                     </ul>
                 </div>
