--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,12 +2,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Best Online Cubing Community - CubingPanda</title>
+    <title>CubingPanda: The Inclusive Speedcubing Community for All</title>
     <meta name="description"
         content="CubingPanda is a friendly online cubing community home to cubers from around the world. We offer online competitions, cubing help, and more!">
-    <meta property="og:title" content="The Best Online Cubing Community - CubingPanda"/>
+    <meta property="og:title" content=">CubingPanda: The Inclusive Speedcubing Community for All"/>
     <meta property="og:url" content="cubingpanda.com"/>
-    <meta property="og:description" content="Join the CubingPanda cubing community for all things speedcubing!"/>
+    <meta property="og:description" content="Join the friendly and supportive community of CubingPanda, where speedcubers of all levels come together to share their passion and improve their skills. Whether you're a beginner or an expert, you're welcome here."/>
     <link href="./css/styles.css" rel="stylesheet">
 
 </head>
