--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,11 @@
   <section class="bg-white dark:bg-gray-900">
     <div class="grid py-8 px-4 mx-auto max-w-screen-xl lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
       <div class="place-self-center mr-auto lg:col-span-7">
-        <h1 class="mb-4 max-w-2xl text-4xl font-extrabold leading-none md:text-5xl xl:text-6xl dark:text-white">The best online cubing community.</h1>
-        <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">CubingPanda is a friendly online community of speedcubers from all over the world. Offering support & advice as well as a safe place to hangout in.</p>
+        <h1 class="mb-4 max-w-2xl text-4xl font-extrabold leading-none md:text-5xl xl:text-6xl dark:text-white">The best
+          online cubing community.</h1>
+        <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">CubingPanda
+          is a friendly online community of speedcubers from all over the world. Offering support & advice as well as a
+          safe place to hangout in.</p>
         <a href="https://discord.gg/nwH7jcjMaT"
           class="inline-flex justify-center items-center py-3 px-5 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
           Join the Discord
@@ -27,6 +30,31 @@
       </div>
     </div>
   </section>
+
+  <section class="bg-white dark:bg-gray-900">
+    <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
+      <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
+        <h2 class="mb-4 text-4xl font-extrabold text-gray-900 dark:text-white">🐼 Our mission</h2>
+        <p class="mb-4">At CubingPanda, our mission is to provide a supportive and inclusive community for speedcubers of all skill levels. When we first founded CubingPanda in February 2022, we saw that many existing speedcubing communities lacked a friendly and welcoming atmosphere, especially for beginners. That's why we made CubingPanda - to bring together a community of supportive and encouraging individuals who share a passion for speedcubing. Today, we are proud to have thousands of members from around the world, who come together to support one another, share their experiences, and push the limits of their cubing abilities. At CubingPanda, we believe that everyone should have access to a supportive community, regardless of their skill level, and we're committed to making that a reality.
+      </div>
+    </div>
+  </section>
+
+  <section class="bg-white dark:bg-gray-900">
+    <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
+      <div class="mx-auto max-w-screen-sm text-center">
+        <h2 class="mb-4 text-4xl font-extrabold leading-tight text-gray-900 dark:text-white">Join us today
+        </h2>
+        <p class="mb-6 font-light text-gray-500 dark:text-gray-400 md:text-lg">Become a part of our wonderful community.
+        </p>
+        <a href="/discord"
+          class="text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">Join our Discord</a>
+        <a href="/partnership"
+          class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Partner with us</a>
+      </div>
+    </div>
+  </section>
+
 
   <%- include("footer") %>
 
