Made Discord bot

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
           </svg>
         </div>
         <blockquote>
-          <p class="p-4 text-gray-900">"Tight-knit community with a good amount of people. Best cubing server out there. You can always ask questions about cubing and stuff like that and it will be answered. Definitely join this server!</p>
+          <p class="p-4 text-gray-900">"Tight-knit community with a good amount of people. Best cubing server out there. You can always ask questions about cubing and stuff like that and it will be answered. Definitely join this server!"</p>
         </blockquote>
         <figcaption class="flex items-center mt-6 space-x-3">
           <img class="w-6 h-6 rounded-full"
