--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
         </a>
         <a href="/partnership"
           class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
-          Partnership enquiries
+          Become a partner
         </a>
       </div>
       <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
