Hopefully I didn't just install a bitcoin miner :+1: +1:

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CubingPanda: The Inclusive Speedcubing Community for All</title>
     <meta name="description"
-        content="CubingPanda is a friendly online cubing community home to cubers from around the world. We offer online competitions, cubing help, and more!">
+        content="Cubing Panda,a friendly online speedcubing community Discord home to cubers from around the world. We offer online competitions, cubing help, and more!">
     <meta property="og:title" content=">CubingPanda: The Inclusive Speedcubing Community for All" />
     <meta property="og:url" content="cubingpanda.com" />
     <meta property="og:description"
-        content="CubingPanda is a friendly online cubing community home to cubers from around the world. We offer online competitions, cubing help, and more." />
+        content="Cubing Panda,a friendly online speedcubing community Discord home to cubers from around the world. We offer online competitions, cubing help, and more!" />
     <link href="./css/output.css" rel="stylesheet">
 </head>
 
