--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,8 @@
       <div class="place-self-center mr-auto lg:col-span-7">
         <h1 class="mb-4 max-w-2xl text-4xl font-extrabold leading-none md:text-5xl xl:text-6xl dark:text-white">The best
           online cubing community.</h1>
-        <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">CubingPanda
-          is a friendly online community of speedcubers from all over the world. Offering support & advice as well as a
-          safe place to hangout in.</p>
+        <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">CubingPanda, a friendly community of speedcubers from all over the world. Offering support & advice as well as a
+          safe place to hangout in our Discord.</p>
         <a href="https://discord.gg/nwH7jcjMaT"
           class="inline-flex justify-center items-center py-3 px-5 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
           Join the Discord
