--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,6 +10,7 @@
     <meta property="og:description"
         content="Cubing Panda,a friendly online speedcubing community Discord home to cubers from around the world. We offer online competitions, cubing help, and more!" />
     <link href="./css/output.css" rel="stylesheet">
+    <link rel="icon" href="https://i.imgur.com/lI27c2v.png">
 </head>
 
 <body>
@@ -60,6 +61,10 @@
                         <li>
                             <a href="https://github.com/TheCubingPanda"
                                 class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">GitHub</a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/TheCubingPanda"
+                                class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Twitter</a>
                         </li>
                         <li>
                             <a href="https://medium.com/@cubingpandacommunity"
