--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="p-4 bg-gray-50 sm:p-6 dark:bg-gray-800">
     <div class="sm:flex sm:items-center sm:justify-between">
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"> Sorry, I'm not too good at making websites
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"> The code is M31
         </span>
     </div>
     
